@@ -2,7 +2,7 @@
  * Copyright 2025 Rubens Gomes
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
+ * You may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
@@ -11,121 +11,75 @@
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
- * limitations under the__LICENSE] [1].
+ * limitations under the License.
  */
 
-/**
- * This is a blueprint Gradle build.gradle.kts file used by Rubens Gomes during the creation of a
- * new Gradle Spring Boot Java development project.
- *
- * @author [Rubens Gomes](https://rubensgomes.com)
- */
 plugins {
     id("idea")
     id("maven-publish")
     id("version-catalog")
     id("java-library")
-    // io.freefair.lombok
     alias(libs.plugins.lombok)
-    // net.researchgate.release
     alias(libs.plugins.release)
-    // com.diffplug.spotless
     alias(libs.plugins.spotless)
 }
 
-// --------------- >>> gradle properties <<< ----------------------------------
-// properties used to configure "jar" and "publish" tasks
-val group: String by project
-val artifact: String by project
-val version: String by project
-val title: String by project
-val license: String by project
-val licenseUrl: String by project
-val developerEmail: String by project
-val developerId: String by project
-val developerName: String by project
-val scmConnection: String by project
-val scmUrl: String by project
+// ------------------- Debug Mode -------------------
+val isDebugBuild = project.hasProperty("debug") && project.property("debug") == "true"
 
-project.group = group
-project.version = version
-project.description = description
-
-// --------------- >>> repositories <<< ---------------------------------------
-
-repositories {
-    mavenCentral()
+if (isDebugBuild) {
+    val versionCatalog = versionCatalogs.named("libs")
+    println("Library aliases: ${versionCatalog.libraryAliases}")
+    println("Bundle aliases: ${versionCatalog.bundleAliases}")
+    println("Plugin aliases: ${versionCatalog.pluginAliases}")
 }
 
-// --------------- >>> dependencies <<< ---------------------------------------
-
+// ------------------- Dependencies -------------------
 dependencies {
-    // ########## implementation ##############################################
-    // jakarta.annotation:jakarta.annotation-api
+    // Implementation
     implementation(libs.jakarta.annotation.api)
-    // jakarta.validation:jakarta.validation-api
     implementation(libs.jakarta.validation.api)
-    // org.slf4j:slf4j-api
     implementation(libs.slf4j.api)
 
-    // ########## testImplementation ##########################################
-    // org.junit.jupiter:junit-jupiter-params
+    // Test
     testImplementation(libs.junit.jupiter.params)
-    // Logback bundle:
-    //  ch.qos.logback:logback-classic
-    //  ch.qos.logback:logback-core
     testImplementation(libs.bundles.logback)
-    // JUnit Jupiter bundle for tests:
-    //   org.junit.jupiter:junit-jupiter-api
-    //   org.junit.jupiter:junit-jupiter-engine
     testImplementation(libs.bundles.junit.jupiter)
-    // Bean Validation provider for tests:
-    //   jakarta.validation:jakarta.validation-api
-    //   org.glassfish.expressly:expressly
-    //   org.hibernate.validator:hibernate-validator
     testImplementation(libs.bundles.jakarta.bean.validator)
-
-    // ########## testRuntimeOnly    ##########################################
-    // JUnit Jupiter Platform Launcher:
-    //   org.junit.platform:junit-platform-launcher
     testRuntimeOnly(libs.junit.platform.launcher)
 }
 
-// ----------------------------------------------------------------------------
-// --------------- >>> Gradle Base Plugin <<< ---------------------------------
-// NOTE: This section is dedicated to configuring the Gradle base plugin.
-// ----------------------------------------------------------------------------
-// https://docs.gradle.org/current/userguide/base_plugin.html
-
-// ----------------------------------------------------------------------------
-// --------------- >>> Gradle IDEA Plugin <<< ---------------------------------
-// NOTE: This section is dedicated to configuring the Idea plugin.
-// ----------------------------------------------------------------------------
-// https://docs.gradle.org/current/userguide/idea_plugin.html
-
+// ------------------- Idea Plugin -------------------
 idea {
     module {
-        // download javadocs and sources:
-        // $ ./gradlew cleanIdea idea
         isDownloadJavadoc = true
         isDownloadSources = true
     }
 }
 
-// ----------------------------------------------------------------------------
-// --------------- >>> Gradle Java Plugin <<< ---------------------------------
-// NOTE: This section is dedicated to configuring the Java plugin.
-// ----------------------------------------------------------------------------
-// https://docs.gradle.org/current/userguide/java_plugin.html
-
+// ------------------- Java Plugin -------------------
 java {
-    sourceCompatibility = JavaVersion.VERSION_21
-    targetCompatibility = JavaVersion.VERSION_21
     withSourcesJar()
     withJavadocJar()
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(21))
         vendor.set(JvmVendorSpec.AMAZON)
+    }
+}
+
+tasks.jar {
+    manifest {
+        attributes(
+            mapOf(
+                "Specification-Title" to project.properties["title"],
+                "Implementation-Title" to project.name,
+                "Implementation-Version" to project.version,
+                "Implementation-Vendor" to project.properties["developerName"],
+                "Built-By" to project.properties["developerId"],
+                "Build-Jdk" to System.getProperty("java.home"),
+                "Created-By" to "${System.getProperty("java.version")} (${System.getProperty("java.vendor")})",
+            ),
+        )
     }
 }
 
@@ -144,37 +98,7 @@ tasks.javadoc {
     }
 }
 
-tasks.jar {
-    manifest {
-        attributes(
-            mapOf(
-                "Specification-Title" to title,
-                "Implementation-Title" to artifact,
-                "Implementation-Version" to version,
-                "Implementation-Vendor" to developerName,
-                "Built-By" to developerId,
-                "Build-Jdk" to System.getProperty("java.home"),
-                "Created-By" to
-                    "${System.getProperty("java.version")} (${
-                        System.getProperty(
-                            "java.vendor",
-                        )
-                    })",
-            ),
-        )
-    }
-}
-
-tasks.test {
-    useJUnitPlatform()
-}
-
-// ----------------------------------------------------------------------------
-// --------------- >>> Gradle Maven Publish Plugin <<< ------------------------
-// NOTE: This section is dedicated to configuring the maven-publich plugin.
-// ----------------------------------------------------------------------------
-// https://docs.gradle.org/current/userguide/publishing_maven.html
-
+// ------------------- Maven Publish -------------------
 publishing {
     publications {
         create<MavenPublication>("mavenJava") {
@@ -184,47 +108,45 @@ publishing {
             }
 
             groupId = project.group.toString()
-            artifactId = artifact
+            artifactId = project.name
             version = project.version.toString()
 
             from(components["java"])
 
+            // POM configuration
             pom {
-                name = title
+                name = project.properties["title"] as String
                 inceptionYear = "2025"
                 packaging = "jar"
 
                 licenses {
                     license {
-                        name = license
-                        url = licenseUrl
+                        name = project.properties["license"] as String
+                        url = project.properties["licenseUrl"] as String
                     }
                 }
 
                 developers {
                     developer {
-                        id = developerId
-                        name = developerName
-                        email = developerEmail
+                        id = project.properties["developerId"] as String
+                        name = project.properties["developerName"] as String
+                        email = project.properties["developerEmail"] as String
                     }
                 }
 
                 scm {
-                    connection = scmConnection
-                    developerConnection = scmConnection
-                    url = scmUrl
+                    connection = project.properties["scmConnection"] as String
+                    developerConnection = project.properties["scmConnection"] as String
+                    url = project.properties["scmUrl"] as String
                 }
             }
         }
     }
 
     repositories {
-        val msReqrespLibMavenRepoUrl: String by project
-
         maven {
             name = "GitHubPackages"
-            project.version = version
-            url = uri(msReqrespLibMavenRepoUrl)
+            url = uri(project.properties["libMavenRepoUrl"] as String)
             credentials {
                 username = System.getenv("MAVEN_REPO_USERNAME")
                 password = System.getenv("MAVEN_REPO_PASSWORD")
@@ -233,100 +155,70 @@ publishing {
     }
 }
 
-// ----------------------------------------------------------------------------
-// --------------- >>> com.diffplug.spotless Plugin <<< -----------------------
-// NOTE: This section is dedicated to configuring the spotless plugin.
-// ----------------------------------------------------------------------------
-// https://github.com/diffplug/spotless
+// ------------------- Spotless -------------------
+val licenseHeaderText =
+    """
+    /*
+     * Copyright 2025 Rubens Gomes
+     *
+     * Licensed under the Apache License, Version 2.0 (the "License");
+     * You may not use this file except in compliance with the License.
+     * You may obtain a copy of the License at
+     *
+     *     http://www.apache.org/licenses/LICENSE-2.0
+     *
+     * Unless required by applicable law or agreed to in writing, software
+     * distributed under the License is distributed on an "AS IS" BASIS,
+     * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     * See the License for the specific language governing permissions and
+     * limitations under the License.
+     */
+    """.trimIndent()
 
 spotless {
+    // Java formatting
     java {
         target("src/**/*.java")
-
-        // Use Google Java Format
         googleJavaFormat()
-
-        // Remove unused imports
         removeUnusedImports()
-
-        licenseHeader(
-            """
-            /*
-             * Copyright 2025 Rubens Gomes
-             *
-             * Licensed under the Apache License, Version 2.0 (the "License");
-             * you may not use this file except in compliance with the License.
-             * You may obtain a copy of the License at
-             *
-             *     http://www.apache.org/licenses/LICENSE-2.0
-             *
-             * Unless required by applicable law or agreed to in writing, software
-             * distributed under the License is distributed on an "AS IS" BASIS,
-             * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-             * See the License for the specific language governing permissions and
-             * limitations under the License.
-             */
-            """.trimIndent(),
-        )
-
-        // Custom import order
+        licenseHeader(licenseHeaderText)
         importOrder("java", "javax", "org", "com", "")
-
-        // Trim trailing whitespace
         trimTrailingWhitespace()
-
-        // End with newline
         endWithNewline()
     }
 
+    // Kotlin formatting
+    kotlin {
+        target("src/**/*.kt")
+        ktfmt()
+        licenseHeader(licenseHeaderText)
+        trimTrailingWhitespace()
+        endWithNewline()
+    }
+
+    // JSON formatting
     json {
         target("src/**/*.json")
         jackson()
     }
 
-    // Format Kotlin files (if you add any)
-    kotlin {
-        target("src/**/*.kt")
-        ktfmt()
-        licenseHeader(
-            """
-            /*
-             * Copyright 2025 Rubens Gomes
-             *
-             * Licensed under the Apache License, Version 2.0 (the "License");
-             * you may not use this file except in compliance with the License.
-             * You may obtain a copy of the License at
-             *
-             *     http://www.apache.org/licenses/LICENSE-2.0
-             *
-             * Unless required by applicable law or agreed to in writing, software
-             * distributed under the License is distributed on an "AS IS" BASIS,
-             * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-             * See the License for the specific language governing permissions and
-             * limitations under the License.
-             */
-            """.trimIndent(),
-        )
-        trimTrailingWhitespace()
-        endWithNewline()
-    }
-
-    // Format Gradle Kotlin DSL build file
+    // Kotlin Gradle DSL formatting (root + submodules)
     kotlinGradle {
         target("*.gradle.kts")
-        // Use .editorconfig for fine-grained control
-        ktlint().setEditorConfigPath("../.editorconfig")
+        // .editorconfig for fine-grained control
+        ktlint().setEditorConfigPath("$rootDir/.editorconfig")
         trimTrailingWhitespace()
         endWithNewline()
     }
 }
 
-// ----------------------------------------------------------------------------
-// --------------- >>> net.researchgate.release Plugin <<< --------------------
-// NOTE: This section is dedicated to configuring the release plugin.
-// ----------------------------------------------------------------------------
-// https://github.com/researchgate/gradle-release
+// ------------------- JVM Test Suite -------------------
+tasks.test {
+    useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
+}
 
+// ------------------- Release Plugin -------------------
 release {
     with(git) {
         pushReleaseVersionBranch.set("release")
